# napari_nucleaizer

./: .gitignore  LICENSE  README.md  launch_napari.py  mkdocs.yml  requirements.txt  setup.cfg  setup.py  test_widgets.py  tox.ini
.github/workflows/: test_and_deploy.yml  test_and_deploy_all.yml
.napari-hub/: DESCRIPTION.md  config.yml
docs/: index.md
napari_nucleaizer/: __init__.py  _dock_widget.py  _function.py  common_stuff.py  config_loader.py  image_transform.py  misc.py  model_db.py  model_selector_widget.py  napari.yaml  nucleaizer_widget.py  prediction_widget.py  training_widget.py
napari_nucleaizer/_tests/: test_dock_widget.py  test_function.py  test_prediction_widget.py  test_reader.py  test_training_widget.py  test_writer.py
