[metadata]
name = napari_nucleaizer
version = 0.1.1
author = Ervin Tasnadi
author_email = tasnadi.ervin@brc.hu
url = https://github.com/etasnadi/napari_nucleaizer
license = GPL-3.0
description = A GUI interface for training and prediction using the nucleAIzer nuclei detection method.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    'Development Status :: 3 - Alpha'
    'Intended Audience :: Developers'
    'Framework :: napari'
    'Topic :: Software Development :: Testing'
    'Programming Language :: Python'
    'Programming Language :: Python :: 3'
#    'Programming Language :: Python :: 3.7'
    'Programming Language :: Python :: 3.8'
    'Programming Language :: Python :: 3.9'
    'Operating System :: OS Independent'
    'License :: OSI Approved :: BSD License'

project_urls = 
    Bug Tracker = https://github.com/etasnadi/napari_nucleaizer/issues
    Documentation = https://github.com/etasnadi/napari_nucleaizer/blob/master/README.md
    Source Code = https://github.com/etasnadi/napari_nucleaizer
    User Support = https://github.com/etasnadi/napari_nucleaizer/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =.

install_requires =
    jsonpickle
    napari
    numpy
    qtpy
    scikit-image
    imageio
    #nucleaizer_backend
    PyQt5
    qtbot
    pytest-qt
    git+https://github.com/etasnadi/nucleaizer_backend/#egg=nucleaizer_backend

[options.packages.find]
where = .

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari_nucleaizer = napari_nucleaizer:napari.yaml
