[metadata]
name = napari-nucleaizer
version = 0.2.5
author = Ervin Tasnadi
author_email = tasnadi.ervin@brc.hu
url = https://github.com/etasnadi/napari_nucleaizer
license = BSD-3
description = A GUI interface for training and prediction using the nucleAIzer nuclei detection method.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

project_urls = 
    Bug Tracker = https://github.com/etasnadi/napari_nucleaizer/issues
    Documentation = https://napari-nucleaizer-docs.readthedocs.io/en/latest/index.html
    Source Code = https://github.com/etasnadi/napari_nucleaizer
    User Support = https://github.com/etasnadi/napari_nucleaizer/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =.

install_requires =
    napari
    qtpy
    jsonpickle
    numpy
    scikit-image
    imageio
    nucleaizer-backend
#    git+https://github.com/etasnadi/nucleaizer_backend/#egg=nucleaizer_backend

test_requires =
    pytest-qt
    qtbot

[options.packages.find]
where = .

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari_nucleaizer = napari_nucleaizer:napari.yaml
